# glitch-disc-bot

./: README.md  example.env  main.py  pyproject.toml  start.sh
glitch_disc_bot/: main.py
